src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Closed_Incidents_Reason_WMP__c</fullName>
        <label>Closed Incidents Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Solution</fullName>
                </value>
                <value>
                    <fullName>Client Environment</fullName>
                </value>
                <value>
                    <fullName>Closed by Client</fullName>
                </value>
                <value>
                    <fullName>Configuration - 911</fullName>
                </value>
                <value>
                    <fullName>Configuration - Browser</fullName>
                </value>
                <value>
                    <fullName>Configuration - CAD</fullName>
                </value>
                <value>
                    <fullName>Configuration - FBR</fullName>
                </value>
                <value>
                    <fullName>Configuration - GIS Link</fullName>
                </value>
                <value>
                    <fullName>Configuration - Interface</fullName>
                </value>
                <value>
                    <fullName>Configuration - Jail</fullName>
                </value>
                <value>
                    <fullName>Configuration - Mobile</fullName>
                </value>
                <value>
                    <fullName>Configuration - RMS</fullName>
                </value>
                <value>
                    <fullName>Consultation Complete</fullName>
                </value>
                <value>
                    <fullName>Defect - Future Consideration</fullName>
                </value>
                <value>
                    <fullName>Defect – Hot Fix</fullName>
                </value>
                <value>
                    <fullName>Defect - New Product Feature</fullName>
                </value>
                <value>
                    <fullName>Defect – New Release</fullName>
                </value>
                <value>
                    <fullName>Documentation Defect</fullName>
                </value>
                <value>
                    <fullName>Duplicate Issue</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>License Update</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>No Client Response</fullName>
                </value>
                <value>
                    <fullName>Non-Covered Support</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible</fullName>
                </value>
                <value>
                    <fullName>Provided Acceptable Workaround</fullName>
                </value>
                <value>
                    <fullName>Question Answered</fullName>
                </value>
                <value>
                    <fullName>Referred to AE</fullName>
                </value>
                <value>
                    <fullName>Referred to Enhancement Process</fullName>
                </value>
                <value>
                    <fullName>SQL - Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentDate__c</fullName>
        <description>Updated via trigger &quot;UpdateCommentDate&quot;</description>
        <label>CommentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Extension__c</fullName>
        <formula>Contact.Extension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Other_Phone__c</fullName>
        <formula>Contact.OtherPhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Mobile__c</fullName>
        <formula>Contact.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Work Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Date_Time_WMP__c</fullName>
        <label>Customer Contact Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Initiated_Closure_Notes__c</fullName>
        <label>Customer Initiated Closure Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Priority_WMP__c</fullName>
        <inlineHelpText>Customer impact or severity:
P3 - High
P4 - Medium
P5 - Low</inlineHelpText>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <description>Field for the client to enter their internal reference number for a customer support ticket</description>
        <inlineHelpText>If applicable, enter client&apos;s internal reference number for a customer support ticket</inlineHelpText>
        <label>Customer Reference Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <formula>TEXT(Account.Mailing_Billing_State_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_over_SLA_High_Priority__c</fullName>
        <formula>IF( IsClosed, null, NOW() - CreatedDate - 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days over SLA (High Priority)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_over_SLA_Low_Priority__c</fullName>
        <formula>IF( IsClosed, null, NOW() - CreatedDate - 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days over SLA (Low Priority)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefectNumber__c</fullName>
        <label>Defect Number(Hidden)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefectStatus__c</fullName>
        <label>Defect Status(Hidden)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Comments__c</fullName>
        <formula>Potential_Defect__r.TFS_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Number__c</fullName>
        <formula>Potential_Defect__r.Defect_Ticket_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <formula>text(Potential_Defect__r.Ticket_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_TFS_Work_Item__c</fullName>
        <formula>Potential_Defect__r.TFS_Work_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Associated defect&apos;s TFS Work Item number</inlineHelpText>
        <label>Defect TFS Work Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Time__c</fullName>
        <label>Due Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMS_Customer_Number__c</fullName>
        <formula>Account.EMS_Customer_Number_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailDate__c</fullName>
        <label>EmailDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Added_Date_Time_Update__c</fullName>
        <description>Ticket field updated via workflow rule when a new email to case s added. The update of this field will trigger the last modified date on the ticket to update.

WF Rule Name:  WF - Update Ticket with Date Recvd</description>
        <label>Email Added Date/Time Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Sender__c</fullName>
        <label>Email Sender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <label>Email Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Thread__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; ) &amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; MID(Id,11,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Thread</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Intervention_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Intervention Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entered_CCB_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Reporting purposes only - Populated by workflow 
FU - Check &quot;Entered CCB Review</description>
        <inlineHelpText>For Reporting purposes only</inlineHelpText>
        <label>Entered CCB Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entered_Engineering_Defect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For reporting purposes only</description>
        <inlineHelpText>For reporting purposes only</inlineHelpText>
        <label>Entered Engineering Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment_Type__c</fullName>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Command Van</fullName>
                </value>
                <value>
                    <fullName>Demo System</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Disaster</fullName>
                </value>
                <value>
                    <fullName>DOLF</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Pre Go-Live Production</fullName>
                </value>
                <value>
                    <fullName>Pre Go-Live Test</fullName>
                </value>
                <value>
                    <fullName>Pre Go-Live Training</fullName>
                </value>
                <value>
                    <fullName>Pre-Release</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Reporting/DWH</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Field to allow customer or internal user to enter the error message recieved</description>
        <inlineHelpText>Enter the error message received</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested by Samantha O&apos;Brien 3/1/18</description>
        <inlineHelpText>This field will be for Support Management purposes to track tickets where the issue has been escalated to the Management team only.  This is not for general escalations between tiers.</inlineHelpText>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Back_Out_Duration_in_hours__c</fullName>
        <inlineHelpText>911 Upgrade Only: Enter the expected back out duration to reverse the upgrade in hours provided to the customer.</inlineHelpText>
        <label>Estimated Back Out Duration (in hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_for_Upgrade_in_hours__c</fullName>
        <inlineHelpText>Enter the expected upgrade amount of time in hours provided to the customer.</inlineHelpText>
        <label>Estimated Time for Upgrade (in hours)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Frequency__c</fullName>
        <label>Event Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intermittent</fullName>
                </value>
                <value>
                    <fullName>Consistent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Legacy ticket ID #</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_BA_Email__c</fullName>
        <label>FBR BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Call_Resolution__c</fullName>
        <label>First Call Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Client_Contact__c</fullName>
        <label>First Client Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GIS_Internal_Work_Queue__c</fullName>
        <label>xGIS Internal Work Queue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIS_Progress_Notes__c</fullName>
        <label>GIS Progress Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIS_Services_Requested_Due_Date__c</fullName>
        <label>GIS Services Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GIS_Services_Work_Type__c</fullName>
        <label>GIS Services Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom CAD Map Refresh</fullName>
                </value>
                <value>
                    <fullName>Custom Map Conversion</fullName>
                </value>
                <value>
                    <fullName>Custom Mobile Conversion</fullName>
                </value>
                <value>
                    <fullName>Custom Mobile Refresh</fullName>
                </value>
                <value>
                    <fullName>Geo Upgrade</fullName>
                </value>
                <value>
                    <fullName>Misc GIS Services</fullName>
                </value>
                <value>
                    <fullName>Mobile Map Refresh</fullName>
                </value>
                <value>
                    <fullName>Mobile Upgrade</fullName>
                </value>
                <value>
                    <fullName>Omega GIS Services</fullName>
                </value>
                <value>
                    <fullName>RMS Services</fullName>
                </value>
                <value>
                    <fullName>Routing Server</fullName>
                </value>
                <value>
                    <fullName>Routing Server Upgrade</fullName>
                </value>
                <value>
                    <fullName>TomTom CAD Map Conversion</fullName>
                </value>
                <value>
                    <fullName>TomTom CAD Map Refresh</fullName>
                </value>
                <value>
                    <fullName>TomTom Mobile Conversion</fullName>
                </value>
                <value>
                    <fullName>Training – GISLink</fullName>
                </value>
                <value>
                    <fullName>Training – GIS Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gating__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to designate a &apos;gating&apos; issue for pre-go live accounts</inlineHelpText>
        <label>Gating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Internal_1__c</fullName>
        <label>Impact Internal 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact_Internal_2__c</fullName>
        <label>Impact Internal 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact_Tier_1__c</fullName>
        <label>Impact Tier 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact_Tier_2__c</fullName>
        <label>Impact Tier 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Impact_Time_Difference_1__c</fullName>
        <formula>(Impact_Internal_1__c - Impact_Tier_1__c )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Tier 1 to Owner (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Time_Difference_2__c</fullName>
        <formula>(Impact_Internal_2__c -  Impact_Tier_2__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Tier 2 to Owner (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan__c</fullName>
        <inlineHelpText>911 Upgrade Only</inlineHelpText>
        <label>Implementation Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Name__c</fullName>
        <formula>Account.Z_Install_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Products__c</fullName>
        <label>Integration Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>GIS</fullName>
                </value>
                <value>
                    <fullName>Inform Me</fullName>
                </value>
                <value>
                    <fullName>IQ</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
                <value>
                    <fullName>TTMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Ranking__c</fullName>
        <inlineHelpText>This optional field is used to capture the customers Top 10 list (which may not be by SLA Priority) or other internal ranking needs such as Patch Request, Go Live, etc. Customers cannot see this field.</inlineHelpText>
        <label>Internal Ranking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Work_Activities__c</fullName>
        <label>Internal Work Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_DN__c</fullName>
        <label>Jira DN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_Issue_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Known issue has been reviewed and confirmed</inlineHelpText>
        <label>Known Issue Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_Issue_Description__c</fullName>
        <inlineHelpText>Description of the known issue</inlineHelpText>
        <label>Known Issue Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Known_Issues_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the current ticket should be tracked as part of a Known Issues List</inlineHelpText>
        <label>Known Issues List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>New Product Introduction (NPI); previously &quot;LA Case&quot;</inlineHelpText>
        <label>New Product Introduction (NPI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Feature_Request_Saved__c</fullName>
        <formula>Account.Last_Feature_Request_Saved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Feature Request Saved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_GIS_Progress_Notes__c</fullName>
        <label>Last Modified (GIS Progress Notes)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Closed_By__c</fullName>
        <label>Legacy Closed By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact__c</fullName>
        <label>Legacy Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Date_Closed__c</fullName>
        <label>Legacy Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Date_Opened__c</fullName>
        <label>Legacy Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Defect_Association__c</fullName>
        <description>Original ticket defect association from legacy system</description>
        <inlineHelpText>Original ticket defect association from legacy system</inlineHelpText>
        <label>Legacy Defect Association</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Defect_ID__c</fullName>
        <label>Legacy Defect ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Fixed_in_Version__c</fullName>
        <description>Legacy tickets only - Fixed in Version information</description>
        <inlineHelpText>Legacy tickets only - Fixed in Version information</inlineHelpText>
        <label>Legacy Fixed in Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Keyword_s__c</fullName>
        <label>Legacy Keyword(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Master_Related_Ticket_s__c</fullName>
        <label>Legacy Master Related Ticket(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Ticket_ID__c</fullName>
        <label>Legacy Ticket ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Ticket_Priority__c</fullName>
        <label>Legacy Ticket Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Ticket_Status__c</fullName>
        <description>Original ticket status from legacy system</description>
        <inlineHelpText>Original ticket status from legacy system</inlineHelpText>
        <label>Legacy Ticket Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Version__c</fullName>
        <label>Legacy Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Output__c</fullName>
        <label>Log Output</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mac_Hours_Utilized__c</fullName>
        <inlineHelpText>1) List the number of MAC hours required to resolve this item.
2) Minimum.5 hours
3) Round up to the next 1/2 hour
4) REMEMBER TO ADJUST HOURS ON ACCT HW/SW RECORD</inlineHelpText>
        <label>Mac Hours Utilized</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Related_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate ticket to another related/duplicate issue ticket</description>
        <inlineHelpText>Associate ticket to another related/duplicate issue ticket</inlineHelpText>
        <label>Master Related Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Tickets</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_DOLF__c</fullName>
        <label>Milestone Date - DOLF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_Hardware_Installation__c</fullName>
        <label>Milestone Date - Hardware Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_System_FAT_Testing__c</fullName>
        <label>Milestone Date - System FAT Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_System_Orientation__c</fullName>
        <label>Milestone Date - System Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_BA_Email__c</fullName>
        <label>Mobile BA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Modified_after_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field for reporting purposes.  Populated by field update based on workflow rule &quot;FU - Modified after Close&quot; which auto-checks the box when there is either an email or a comment after the ticket is closed.</description>
        <label>Modified after Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Gating__c</fullName>
        <label>NPI Gating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPI_Release_Measurement__c</fullName>
        <label>NPI Release Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Do Not Include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPI_Requirements_Measurement__c</fullName>
        <label>NPI Requirements Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Do Not Include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Reproducible_in_Version__c</fullName>
        <inlineHelpText>Please enter the full version number format for the version that this issue is not reproducible in,  Example:  4.5.10.18</inlineHelpText>
        <label>Not Reproducible in Version:</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occured_After_Upgrade_WMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occurred After Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <description>MOL Use Only:  Ticket &gt; Defect &gt; TFS</description>
        <inlineHelpText>MOL Use Only</inlineHelpText>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Always</fullName>
                </value>
                <value>
                    <fullName>2 - Frequent</fullName>
                </value>
                <value>
                    <fullName>3 - Occasional</fullName>
                </value>
                <value>
                    <fullName>4 - Remote</fullName>
                </value>
                <value>
                    <fullName>5 - Improbable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Site_MAC_Hours_Utilized__c</fullName>
        <inlineHelpText>1) List the number of On Site MAC hours required to resolve this item.
2) Minimum.5 hours when applicable.
3) Round up to the next 1/2 hour
4) REMEMBER TO ADJUST HOURS ON ACCT HW/SW RECORD</inlineHelpText>
        <label>On-Site MAC Hours Utilized</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xOriginal Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_1_Email__c</fullName>
        <label>PM 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_2_Email__c</fullName>
        <label>PM 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PNC_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PNC Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patch_Requested_Date_Time__c</fullName>
        <description>Ticket field updated via workflow rule when the patch requested checkbox is checked.</description>
        <label>Patch Requested Date/Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>